# ansible-chrony

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  playbook.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: settings.yml
.github/workflows/: default.yml  release-drafter.yml  release-galaxy.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/centos7/: molecule.yml
molecule/centos8/: molecule.yml
molecule/fedora/: molecule.yml
molecule/shared/: converge.yml  prepare.yml  verify.yml
molecule/ubuntu2204/: molecule.yml
tasks/: config_chrony.yml  main.yml  set_facts.yml
templates/etc/chrony/: chrony.conf.j2
vars/: debian.yml  redhat.yml
