[tool.poetry]
name = "ansible-chrony"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ansible = "^10.0"
molecule = "^24.0"
molecule-plugins = {extras = ["docker"], version = "*"}

[tool.poetry.group.dev.dependencies]
ansible-lint = "^24.0"
black = "^24.0"
pylint = "^3.0"
flake8 = "^7.0"
cookiecutter = "^2.6"
pre-commit = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
